src/snapshots/afrotd__parser__tests__interpretation_html_6.4.1_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            B10 gibt ein Fair Catch-Signal, mufft den Ball und fängt ihn
            anschließend.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wenn B10 die Möglichkeit zum Fangen des Kicks nach seinem Muff
                hat, darf er nicht beim Fangen behindert werden. Wenn B10 den
                gemufften Kick fängt, wird der Ball am Punkt von B10’s erster
                Berührung dead.
            </p>
        </details>
    </div>
</article>
