src/snapshots/afrotd__parser__tests__interpretation_html_6.4.1_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 10 von der 50-Meterlinie. B17 befindet sich an der B20 in
            dem Bereich, um Team A’s hohen Scrimmage Kick zu fangen. Während
            der Ball sich herabsenkt, berührt A37 B17 in brutaler Weise, bevor
            dieser den Ball berührt. A37 verzögerte seine Geschwindigkeit nicht
            und machte auch sonst keine Anstalten, B17 auszuweichen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Schweres Persönliches Foul durch Team A, Behinderung beim
                Fangen eines Kicks. Strafe –15 Meter vom Punkt des Fouls. A37
                wird disqualifiziert.
            </p>
        </details>
    </div>
</article>
