src/snapshots/afrotd__parser__tests__interpretation_html_6.4.1_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 10 von der Mittellinie. Team A’s Scrimmage Kick senkt sich
            an der B-30. B18, von der B-20 kommend, muss an der B-25 um A92
            herum laufen, um den Kick an der B-30 zu fangen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul durch A92 wegen der Behinderung beim Fangen eines Kicks.
                Strafe – 15 Meter vom Punkt des Fouls (B-25).
            </p>
        </details>
    </div>
</article>
