src/snapshots/afrotd__parser__tests__interpretation_html_6.5.1_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.1.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach einem gültigen oder ungültigen Signal mufft B1 den Punt und
            B2, der nicht signalisierte, fängt den Ball nach dem Kick.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball wird dead, als er von B2 gefangen wird. Er wird
                anschließend an den Punkt der ersten Berührung durch B1
                platziert.
            </p>
        </details>
    </div>
</article>
