src/snapshots/afrotd__parser__tests__interpretation_html_6.5.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            B1 steht mit einem Bein im Aus und mit dem anderen im Spielfeld,
            als er ein gültiges oder ein ungültiges Fair Catch-Signal anzeigt.
            Er fängt dann den Kick inbounds.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Es gibt keine Regelung für einen Receiving Team Spieler, der
                während eines Kicks ins Aus geht. Das Fangen ist legal und der
                Ball wird mit dem Fangen dead.
            </p>
        </details>
    </div>
</article>
