src/snapshots/afrotd__parser__tests__interpretation_html_6.5.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Punt Receiver B22 macht ein ungültiges Signal, indem er eine Hand
            nur kurz nach oben reckt. Er fängt den Ball an der B-35 und
            sprintet bis zu der B-40, wo er getackelt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball ist am Punkt des Fangens dead. Foul, Spielverzögerung
                durch B22. 5Meterstrafe vom Dead Ball Spot. Kein Foul durch den
                Tackler, da B22 deutlich als Ballträger fungierte. B’s Ball, 1.
                und 10 von der B-30.
            </p>
        </details>
    </div>
</article>
