src/snapshots/afrotd__parser__tests__interpretation_html_6.5.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A1 oder B1 zeigt jenseits der neutralen Zone einen Fair Catch an,
            während der Kick nicht die neutrale Zone überquert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Alle Signale durch Team A werden ignoriert. Team B darf kein
                Fair Catch-Signal geben, da der Ball die neutrale Zone nicht
                überquert. Der Ball wird jedoch dead, sobald er gefangen oder
                recovert wird (Regeln 2.8.1.a und 4.1.3.g)
            </p>
        </details>
    </div>
</article>
