src/snapshots/afrotd__parser__tests__interpretation_html_6.5.3_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.3.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s Scrimmage Kick rollt jenseits der neutralen Zone, als B17
            seine Mitspieler auffordert, vom Ball wegzubleiben. Dabei winkt er
            mit seinen Armen unterhalb seiner Taille oder tiefer.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Ungültiges Signal. Der Ball wird gemäß den Regeln dead, wenn
                eines der Teams ihn recovert.
            </p>
        </details>
    </div>
</article>
