src/snapshots/afrotd__parser__tests__interpretation_html_6.5.3_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.3.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Während sich ein Free Kick in der Luft befindet, streckt B21 beide
            Arme seitlich aus („T –Signal“), ohne den Kick zurücktragen zu
            wollen. Der Kick wird an der B5 a) von B21 oder b) von B44
            gefangen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball wird mit dem Fangen dead. a) Team B’s Ball, 1. und 10
                an der B-25. b) Team B’s Ball, 1. und 10 an der B-5.
            </p>
        </details>
    </div>
</article>
