src/snapshots/afrotd__parser__tests__interpretation_html_6.5.5_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.5.5.II
        </p>
    </div>
    <div class="message-body">
        <p>
            B22 macht einen Fair Catch und wird getackelt, bevor er den Ball
            mehr als zwei Schritte getragen hat.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul des Tacklers. Strafe – 15 Meter vom Succeeding Spot.
            </p>
        </details>
    </div>
</article>
