src/snapshots/afrotd__parser__tests__interpretation_html_7.1.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.1.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem die Team A-Spieler für eine Sekunde still gestanden haben,
            entfernt sich End A88 weiter vom Ende der Scrimmage Line und
            stoppt. Bevor eine Sekunde vergeht, startet Back A36 seine
            Rückwärtsbewegung.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legal. Aber wenn Back A36 startet, bevor A88 stoppt, bedeutet
                die gleichzeitige Bewegung der beiden Spieler einen Shift und
                alle Team A-Spieler müssen vor dem Snap für eine Sekunde still
                stehen (Regel 2.22.1).
            </p>
        </details>
    </div>
</article>
